# recommend-movielens

./: LICENSE  README.md  docker-compose.yaml  makefile
data_registration/: Dockerfile  pyproject.toml  requirements.txt
data_registration/src/: main.py
data_registration/src/domain/repository/: movies_repository.py  ratings_repository.py  tables_repository.py  tags_repository.py
data_registration/src/infrastructure/: database.py
data_registration/src/infrastructure/repository/: movies_repository.py  ratings_repository.py  tables_repository.py  tags_repository.py
data_registration/src/infrastructure/schema/: ratings_schema.py  tables_schema.py
data_registration/src/middleware/: logger.py
data_registration/src/repository/: movies_repository.py  ratings_repository.py  tables_repository.py  tags_repository.py
data_registration/src/schema/: abstract_schema.py  movies_schema.py  ratings_schema.py  tags_schema.py
data_registration/src/usecase/: data_register_usecase.py
machine_learning/: Dockerfile  pyproject.toml  requirements.txt
machine_learning/hydra/: default.yaml
machine_learning/src/: main.py
machine_learning/src/domain/: common_data.py  evaluation_data.py  prediction_data.py  preprocessed_data.py  raw_data.py  training_data.py
machine_learning/src/domain/algorithm/: lightgbm_regressor.py  models.py  preprocess.py
machine_learning/src/domain/model/: prediction_data.py  preprocessed_data.py  raw_data.py  (+1 more)
machine_learning/src/infrastructure/: database.py
machine_learning/src/middleware/: logger.py
machine_learning/src/ml_algos/: lightgbm_regressor.py  models.py  preprocess.py
machine_learning/src/repository/: movies_repository.py  ratings_repository.py  tags_repository.py
machine_learning/src/schema/: abstract_schema.py  movies_schema.py  tags_schema.py
machine_learning/src/usecase/: data_loader_usecase.py  evaluation_usecase.py  prediction_usecase.py  preprocess_usecase.py  training_usecase.py
machine_learning/tests/: conftest.py
machine_learning/tests/usecase/: test_data_loader_usecase.py  test_preprocess_usecase.py
mlflow/: Dockerfile  pyproject.toml  requirements.txt
notebook/: Dockerfile  lightgbm.ipynb  movielens_lightgbm.ipynb  pyproject.toml  requirements.txt
(+12 files in other folders)
