[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
scikit-learn = "1.5.1"
hydra-core = "1.3.2"
mlflow = "2.14.3"
pydantic = "2.8.2"
pandas = "2.2.2"
numpy = "1.26.4"
optuna = "3.6.1"
lightgbm = "4.5.0"
psycopg2-binary = "2.9.9"
pandera = "0.18.3"
pyyaml = "6.0.1"
types-psycopg2 = "2.9.21.20240417"
pandas-stubs = "2.2.2.240603"
types-pyyaml = "6.0.12.20240724"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
