[tool.poetry]
name = "mlflow_"
version = "0.1.0"
description = ""
authors = ["takuya.mouri <ayukat101699@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
sqlalchemy = "2.0.32"
psycopg2-binary = "2.9.9"
google-cloud-storage = "2.18.2"
azure-storage-blob = "12.22.0"
boto3 = "1.34.34"
mlflow = "2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
